namespace DeliverySystem.Domain.Enums;

public enum DeliveryStatus
{
    Pending = 0,
    Assigned = 1,
    PickedUp = 2,
    InTransit = 3,
    Delivered = 4,
    Failed = 5
}
