namespace DeliverySystem.Domain.Enums;

public enum VehicleType
{
    Bicycle = 0,
    Car = 1
}
